# stapp-transcript-converter

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  run_stapp.py  run_stapp.spec
.streamlit/: config.toml
hooks/: hook-streamlit.py
src/: main.py
src/logic/: add_subsections_to_transcript.py  calculations.py  convert_transcript.py
src/pages/: 01_example_app.py  11_transcript_converter.py  12_youtube_screenshot.py  12_yt_frame_capture.py
src/ui/: SideMenus.py  UserInputs.py  spiral_chart.py
tests/: test_main.py  test_pages_example_app.py
